--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,10 +14,15 @@
 </head>
 
 <body>
+    <img src="portrait.jpg" alt="">
     <h1>Vinzenz Liebherr</h1>
     <h2>MIB Semester 5</h2>
-    <br><br>
-    <h2>Aufgaben:</h2>
+    <br>
+    <h2>Link zum Repo:</h2>
+    <a href="https://github.com/Vinzenz0411/PRIMASOSE2022"></a>
+    <br>
+
+    <h2>Aufgaben/Abgaben:</h2>
     <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 
