--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,12 +14,10 @@
 </head>
 
 <body>
-    <img src="portrait.jpg" alt="">
     <h1>Vinzenz Liebherr</h1>
     <h2>MIB Semester 5</h2>
     <br>
-    <h2>Link zum Repo:</h2>
-    <a href="https://github.com/Vinzenz0411/PRIMASOSE2022"></a>
+    <h2>Link zum Repo: <a href="https://github.com/Vinzenz0411/PRIMASOSE2022">Github Repo</a> </h2>
     <br>
 
     <h2>Aufgaben/Abgaben:</h2>
