steckbrief kleinere Schrift

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,13 +14,9 @@
 </head>
 
 <body>
-    <h1>Vinzenz Liebherr</h1>
-    <h2>MIB Semester 5</h2>
-    <br>
-    <h2>Link zum Repo: <a href="https://github.com/Vinzenz0411/PRIMASOSE2022">Github Repo</a> </h2>
-    <br>
-
-    <h2>Aufgaben/Abgaben:</h2>
+    Vinzenz Liebherr MIB Semester 5
+    <br> Link zum Repo: <a href="https://github.com/Vinzenz0411/PRIMASOSE2022">Github Repo</a>
+    <br> Aufgaben/Abgaben:
     <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 
