--- a/Minigolf/index.html
+++ b/Minigolf/index.html
@@ -62,15 +62,12 @@
                 viewport.initialize("InteractiveViewport", graph, cmpCamera, canvas);
                 FudgeCore.Debug.log("Viewport:", viewport);
                 // hide the cursor when interacting, also suppressing right-click menu
-                canvas.addEventListener("mousedown", canvas.requestPointerLock);
-                canvas.addEventListener("mouseup", function() {
-                    document.exitPointerLock();
-                });
+
                 // make the camera interactive (complex method in FudgeAid)
-                FudgeAid.Viewport.expandCameraToInteractiveOrbit(viewport);
+                //FudgeAid.Viewport.expandCameraToInteractiveOrbit(viewport);
                 // setup audio
                 let cmpListener = new ƒ.ComponentAudioListener();
-                cmpCamera.node.addComponent(cmpListener);
+                //cmpCamera.node.addComponent(cmpListener);
                 FudgeCore.AudioManager.default.listenWith(cmpListener);
                 FudgeCore.AudioManager.default.listenTo(graph);
                 FudgeCore.Debug.log("Audio:", FudgeCore.AudioManager.default);
@@ -94,6 +91,14 @@
     <!--Canvas for FUDGE to render to-->
     <canvas class="fullscreen">
 </canvas>
+
+
+
+
+
+
+
+
 
 
 
