config json use, vui changes fixes

--- a/Minigolf/index.html
+++ b/Minigolf/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <div id="hits">
-        Hits: <input style="width: 30px" key="hits" type="number" value="0" disabled="" />
+        Hits: <input style="width: 30px" key="hits" type="number" value="0" disabled="" /> Max: <input style="width: 30px" key="maxHits" type="number" disabled="" />
     </div>
 
 </body>
