--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,7 @@
 
 <body>
     <br> Link zum Repo: <a href="https://github.com/Vinzenz0411/PRIMASOSE2022">Github Repo</a>
-    <br> Aufgaben/Abgaben:
+    <br> Prüfungsabgabe (Minigolf): <a href="https://github.com/Vinzenz0411/PRIMASOSE2022/tree/main/Minigolf">Endabgabe</a>
     <!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 
